[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "macros"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
time = { version = "0.3", features = ["serde"] }
dotenv = "0.15"
tower = "0.4"
chrono = { version = "0.4.40", features = ["serde"]}
